removes proprietary images from presentation

--- a/index.html
+++ b/index.html
@@ -120,16 +120,6 @@ $$\sum\subscript{j = 1}^p |b_j| + c \sum\subscript{j < k} \max\\{ |b_j|, |b_k| \
             <script type="text/template">
 ### OSCAR
 
-(a) $\rho = 0.15$ (b) $\rho = 0.85$
-
-![Graphical representation of OSCAR](img/OSCAR.png)
-            </script>
-          </section>
-
-          <section data-markdown>
-            <script type="text/template">
-### OSCAR
-
 #### An interesting observation 
 
 OSCAR is actually a special case of SLOPE:
@@ -279,16 +269,6 @@ $$\arg\min\subscript{\mathbf{b}} \left\lVert \mathbf{y} - X\mathbf{b} \right\rVe
 * Larger $\gamma$ $\Rightarrow$ more smoothing.
             </script>
           </section>
-
-          <section data-markdown>
-            <script type="text/template">
-$L\subscript{\gamma}$-norm ball:
-
-![L_gamma norm](img/Pan_et_al.png)
-
-Larger $\gamma$ $\Rightarrow$ more smoothing.
-            </script>
-          </section>
         </section>
 
         <section>
@@ -309,14 +289,10 @@ Larger $\gamma$ $\Rightarrow$ more smoothing.
 
           <section data-markdown>
             <script type="text/template">
-<small>
 * Prior assumption: $I(b_i \neq 0) = I(b_j \neq 0)$ if $i \sim j$.
 * Truncated Lasso Penalty (Shen et. al. 2012):
 
 $$J\subscript{\tau}(|z|) = \min\left( \frac{|z|}{\tau}, 1 \right) \rightarrow I(z \neq 0), \quad \mathrm{as}\, \tau \to 0^+.$$
-
-</small>
-![TLP](img/TLP.png)
             </script>
           </section>
 
@@ -521,7 +497,7 @@ $$\mathrm{supp}(V^{(i)}) \subseteq \mathcal{N}_i,\quad \forall i = 1,\dots,p.$$
 				history: true,
         slideNumber: true,
 
-				transition: 'concave', // none/fade/slide/convex/concave/zoom
+				transition: 'slide', // none/fade/slide/convex/concave/zoom
 
         // MathJax integration
         math: {
